--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 2</title>
-    <link rel="stylesheet" href="./css/2form.css" />
+    <link rel="stylesheet" href="./css/2-form.css" />
   </head>
   <body>
     <a href="../index.html" class="main">Back to Main</a>
 
-    form.
+    <form class="feedback-form" autocomplete="off">
+      <label>
+        Email
+        <input type="email" name="email" autofocus />
+      </label>
+      <label>
+        Message
+        <textarea name="message" rows="8"></textarea>
+      </label>
+      <button type="submit">Submit</button>
+    </form>
 
     <script src="./js/2-form.js" type="module"></script>
   </body>
