--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/1-gallery.css" />
   </head>
   <body>
-    <a href="../index.html" class="main">Back to Main</a>
+    <a href="./index.html" class="main">Back to Main</a>
 
     <ul class="gallery"></ul>
 
