--- a/src/2-form.html
+++ b/src/2-form.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/2-form.css" />
   </head>
   <body>
-    <a href="../index.html" class="main">Back to Main</a>
+    <a href="./index.html" class="main">Back to Main</a>
 
     <form class="feedback-form" autocomplete="off">
       <label>
